test/corpus/fail/bad-actor-import4.mo
=========
bad-actor-import4.mo
=========

//MOC-FLAG --actor-idl bad-actor-import4
import imported1 "ic:lg264-qjkae";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp


---

(source_file
  (line_comment)
  (import
    (var_pat
      (identifier))
    (text_literal))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))
